--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Simple Chess Using Javascript</h1>
+    <h1>Chess</h1>
     <div id="gameboard" ></div>
     <div class="bars">
         <p class="turnbar">It Is <span id="player"></span>'s Turn.</p>
